fix years not wrapping

--- a/styles.css
+++ b/styles.css
@@ -322,6 +322,7 @@ img {
 .collection-menu {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   font-size: 17px;
   list-style: none;
   padding: 0;
